<resources>
    <string name="app_name">EXAMEN_02_REYES_WERNER</string>
    <string name="examen_calificado_02">Examen Calificado 02</string>
    <string name="mostrar">Mostrar</string>
    <string name="ocultar">Ocultar</string>
    <string name="registro_de_pedidos">Registro de pedidos</string>
    <string name="nombre_del_cliente">Nombre del cliente</string>
    <string name="productos">Productos</string>
    <string name="n_mero_cliente">Número Cliente</string>
    <string name="ciudad">Ciudad</string>
    <string name="direcci_n">Dirección</string>
    <string name="registrar">Registrar</string>
    <string name="ubicaci_n">Ubicación</string>
    <string name="watshapp">watshapp</string>
</resources>